# AME-TestTask

./: .gitignore  README.md
_cmake/: applyConfiguration.cmake  paths.cmake
_other/: Тестовые задания.docx
_resources/: resources_main.qrc
sources/: CMakeLists.txt
