
cmake_minimum_required(VERSION 3.7...3.29)

project(AME_TestTask
        VERSION 1.0.0
        DESCRIPTION "Test Task for company АО НПП\"Авиационная и морская электроника\""
        LANGUAGES CXX)

message("Top level CMake project - ${CMAKE_PROJECT_NAME}")

# Main window
add_subdirectory(bin)















